# git_pip_example

./: README.md  setup.cfg
.github/workflows/: python-publish.yml
src/hello_remote/: hello_remote.py
src/hello_remote_WesBrueland_PFG.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
