[metadata]
name = hello-remote-WesBrueland-PFG
version = 0.0.1
author = WesBrueland-PFG
author_email = brueland.wesley@principal.com
description = A small example package for installing from Github
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WesBrueland-PFG/git_pip_example.git
project_urls =
    Bug Tracker = https://github.com/WesBrueland-PFG/git_pip_example.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
